--- a/package.json
+++ b/package.json
@@ -13,8 +13,6 @@
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives",
     "lint:fix": "eslint --fix .",
     "preview": "vite preview",
-    "test": "vitest -u",
-    "test:ui": "vitest -u --ui",
     "icons": "rm -rf public/icons/* && pwa-asset-generator icon.png public/icons -i index.html -t png -e -f -w -o false"
   },
   "dependencies": {
@@ -22,16 +20,11 @@
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "@testing-library/jest-dom": "^6.1.3",
-    "@testing-library/react": "^14.0.0",
-    "@testing-library/user-event": "^14.5.1",
-    "@types/jest": "^29.5.5",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
     "@vitejs/plugin-react": "^4.0.3",
-    "@vitest/ui": "^0.34.4",
     "autoprefixer": "^10.4.15",
     "clsx": "^2.0.0",
     "eslint": "^8.45.0",
@@ -44,8 +37,6 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
     "eslint-plugin-tailwindcss": "^3.13.0",
-    "eslint-plugin-vitest": "^0.3.1",
-    "jsdom": "^22.1.0",
     "prettier": "^3.0.2",
     "prettier-plugin-tailwindcss": "^0.5.3",
     "pwa-asset-generator": "^6.3.1",
@@ -54,7 +45,6 @@
     "typescript": "^5.0.2",
     "vite": "^4.4.5",
     "vite-plugin-pwa": "^0.16.5",
-    "vite-tsconfig-paths": "^4.2.0",
-    "vitest": "^0.34.4"
+    "vite-tsconfig-paths": "^4.2.0"
   }
 }
