--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,6 +24,6 @@
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true
   },
-  "include": ["src"],
+  "include": ["src", "*.config.ts"],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
